[NCIMT-8] Code cleansing -- Remove unused local variables, fix redundant null checking, improve error handling, etc. [KLO, 021413]
git-svn-id: https://ncisvn.nci.nih.gov/svn/ncimappingtool/trunk@132 b80c6a4f-fe9a-481f-9592-7df69df0cfed